--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
+    "firebase": "^11.10.0",
     "postcss": "^8.4.38",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-image-crop": "^11.0.10",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "eslint": "^8.57.1",
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.6.2"
   }
 }
