--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-toast": "^1.2.14",
     "@reduxjs/toolkit": "^2.8.2",
+    "@sentry/react": "^9.35.0",
+    "@sentry/tracing": "^7.120.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -15,7 +18,10 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "postcss": "^8.4.38",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
@@ -26,7 +32,9 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
